--- a/p3/p3.md
+++ b/p3/p3.md
@@ -381,7 +381,9 @@ IMPORTANT: these are *NOT* problems with the AI being sub-optimal. These are pro
 
 But what if... we made an AI that *used Security Mindset against itself?*
 
-For now, let's assume an "optimal capabilities" AI — (again, we'll tackle sub-optimal AIs later) — that can predict the world perfectly. And since _you're_ part of the world, it can predict _how you'd react to various outcomes_ perfectly.
+For now, let's assume an "optimal capabilities" AI — again, we'll tackle sub-optimal AIs later — that can predict the world perfectly. (or at least as good as theoretically possible[^inb4-nerd]) And since _you're_ part of the world, it can predict _how you'd react to various outcomes_ perfectly.
+
+[^inb4-nerd]: inb4 some nerdy nitpicking: yeah yeah _perfect_ prediction is impossible because there's the Halting Problem and chaotic systems bla blah. Look, those are cool, but don't they don't matter to the following segment. Just mentally note that I mean: "this optimal-capabilities AI can predict stuff as well as is theoretically possible".
 
 **Then, here's the "Future Lives" algorithm:**
 
