--- a/p2/p2.md
+++ b/p2/p2.md
@@ -51,7 +51,7 @@ This is called **Goal Mis-specification** (also called Reward Mis-specification)
 
 (If you forgot from Part One, here's how [:seemingly-obvious ways to make "humane AI" can go wrong](#WaysToMakeHumaneAIGoingWrong). Bonus: [:even *passive* goals like "predict something" can lead to harmful results!](#StoryOfPassivePredictionLeadingToHarm) 👈 *OPTIONAL: Click to expand these texts!*)
 
-*(Also — if you'd like to be notified when Part 3: The Proposed Solutions is out, in mid-December, sign up below! If you're a high-schooler you can also get free stickers 👇)*
+*(By the way, this series was made in collaboration with Hack Club, a worldwide community for & by teen hackers! If you'd like to learn more, and get free stickers, sign up below👇)*
 
 {% include 'templates/signup.html' %}
 
