--- a/p3/p3.md
+++ b/p3/p3.md
@@ -145,14 +145,18 @@ Anywho: with the power of friendship, math, and a bad Wild West accent...
 
 ---
 
-Now that the visual hook is over, here's the quick sponsor intermission. This series was funded by **Hack Club** and the **Long Term Future Fund**; thank you both for helping me pay food & rent in this economy.
+Now that the visual hook is over, here's a quick Who Did This intermission!
 
-- 🦕 [**Hack Club**](https://hackclub.com/) helps teen hackers around the world learn from each other, and pssst they're hosting two [cool](https://midnight.hackclub.com/) [hackathons](https://midnight.hackclub.com/) soon!
-- 🔮 [**Long Term Future Fund**](https://funds.effectivealtruism.org/funds/far-future) throws money at stuff that helps reduce P(doom). Like, y'know, advanced AI, bioweapons, nuclear war, and other fun lighthearted topics.
+_AI Safety for Fleshy Humans_ was created by **Nicky Case**, in collaboration with **Hack Club**, with some extra funding by **Long Term Future Fund**!
 
-Also, since this is the *last* entry in this series, if you wanna stay up to date on my future math/science/AI-explainer-y projects, you can sign up for [my YouTube channel](https://www.youtube.com/@itsnickycase) or [my once-a-month newsletter](https://ncase.me/sub/): 👇
-
+😸 [**Nicky Case**](https://ncase.me) (me, writing about myself in the third person) just wants to watch the world learn. If you wanna see future explainers on AI Safety (or other topics) by me, sign up for [my YouTube channel](https://www.youtube.com/@itsnickycase) or [my once-a-month newsletter](https://ncase.me/sub/): 👇
 <iframe src="https://ncase.me/ncase-credits/signup2.html" frameborder="no" width="640" height="250"></iframe>
+
+🦕 [**Hack Club**](https://hackclub.com/) helps teen hackers around the world learn from each other, and pssst, they're hosting two [cool](https://midnight.hackclub.com/) [hackathons](https://midnight.hackclub.com/) soon! You can sign up below to learn more, and get free stickers: 👇
+
+{% include 'templates/signup.html' %}
+
+🔮 [**Long Term Future Fund**](https://funds.effectivealtruism.org/funds/far-future) throws money at stuff that helps reduce $\text{ProbabilityOf( Doom )}$. Like, you know, advanced AI, bioweapons, nuclear war, and other fun lighthearted topics.
 
 Alright, back to the show!
 
@@ -840,7 +844,7 @@ So, you place probes to _observe_ each layer in your ANN. _The probes do not aff
 
 [^nitpick-thermometer]: Ok in real life, any inserted thermometer _has_ to modify the original thing's temperature, because the themometer takes/gives off heat into the thing. Look, artificial neural networks are in a simulation. We can _code_ it to not modify the original.
 
-(Also, because we want to know _where_ in the original ANN it's processed the text enough to "understand negation", the _probes themselves should have as little processing as possible_. They're usually one-layer neural networks, or "linear classifiers".[^linear-probes])
+(Also, because we want to know where in the _original_ ANN it's processed the text enough to "understand negation", the _probes themselves_ should have as little processing as possible. They're usually one-layer neural networks, or "linear classifiers".[^linear-probes])
 
 [^linear-probes]: (Math warning) A linear classifier is just $y = \text{sigmoid}( \beta_0 + \beta_1 x_1 + \beta_2 x_2 + ...)$, which is the exact same formula for neurons in a traditional ANN. So, you could (I could) sneakily call a linear classifier a "one-layer neural network". You _could_ use more complex "nonlinear" probes, but then you run the risk of measuring info-processing _in the probe_, not the original ANN. (But you can catch this problem by running "placebo tests" on the probe. If it's still able to classify stuff _even if you feed it fake, random input_, then the probe's so complex, it can just memorize examples.)
 
@@ -1083,7 +1087,7 @@ Okay, enough over-explaining. Time to apply SIMPLICITY / DIVERSITY / ADVERSITY t
     * There's also "_impact/influence_ regularization"[^impact-regularize], where we incentivize AIs to do tasks while creating as few irreversible side-effects as possible.
 * <u>Auto-Encoders</u>, as explained in the previous section, are neural networks with an "hourglass figure": large at the input, smaller in the middle, back to large at the output. The network is then trained to *output its own input* — (hence, *auto*-encoder) — but after squeezing it through the "bottleneck" in the middle. This forces the network to learn to simple "essence" of an input, so it can be reconstructed later.
 * <u>Speed/Simplicity Prior for Honest AI</u>.[^speed-prior] (Proposed, not yet tested in real life.) Since it's harder to tell a consistent lie than to tell the consistent truth, it's proposed that we can incentivize AIs to be honest by rewarding them for being *quick*. (Though: if you incentivize it *too* much for quick-ness, you may just get lazy wrong answers.)
-* <u>Satisficers</u>. Right now, [: almost all AIs (& human institutions) are prone to Goodhart's Law](https://aisafety.dance/media/p2/gms/goodhart.png), where AIs/Humans will "game" whatever goal metric you give them. So, [Taylor 2016](https://cdn.aaai.org/ocs/ws/ws0198/12613-57416-1-PB.pdf) proposes: instead of instructing AIs to _maximize_ an objective, you have them _satisfice_ an objective. For example, "0.1-quantilizer" would generate only 10 options, then _stop_, and just pick the best one so far. (1/10 = 0.1)
+* <u>Satisficers</u>. Right now, [: almost all AIs (& human institutions) are prone to Goodhart's Law](#GoodhartComic), where AIs/Humans will "game" whatever goal metric you give them. So, [Taylor 2016](https://cdn.aaai.org/ocs/ws/ws0198/12613-57416-1-PB.pdf) proposes: instead of instructing AIs to _maximize_ an objective, you have them _satisfice_ an objective. For example, "0.1-quantilizer" would generate only 10 options, then _stop_, and just pick the best one so far. (1/10 = 0.1)
 
 [^impact-regularize]: See the Impact Regularizer section of [Amodei & Olah 2016](https://arxiv.org/pdf/1606.06565) for details
 
@@ -1133,6 +1137,12 @@ But hang on, if AI engineers are _already_ doing all the above for modern AI, wh
 Well, one, they usually _don't_ do all, or even most, of the above. Frontier AIs are usually "only" trained with 1 or 2 of the above Robustness techniques. Each technique isn't _too_ costly, but the costs add up.
 
 But even if AI engineers _did_ apply all the above Robustness techniques, it may _still_ not be enough. Many AI researchers suspect there's a _fundamental flaw_ in the current way we do AI, which leads us to the next section...
+
+#### :x Goodhart Comic
+
+![Meme of the 2 astronauts. \"Wait, it's all Goodhart's Law?\" \"Always has been.\"](https://aisafety.dance/media/p2/gms/goodhart.png "Meme of the 2 astronauts. \"Wait, it's all Goodhart's Law?\" \"Always has been.\"")
+
+Read more about [Goodhart's Law on AI Safety for Fleshy Humans Part 2](https://aisafety.dance/p2/#:~:text=Goodhart's%20Law)
 
 ### 🤔 Review #5
 
@@ -1223,11 +1233,9 @@ On the other hand, these _same_ state-of-the-art LLMs can't run the business of 
     
     The best AI (Gemini 3 Deep Think) on ARC-AGI-1 and -2 is 87.5% (a bit worse) and 45.1% (_much_ worse) costing \\$77/task (almost _five times_ more expensive than hiring _ten humans on MTurk_)
 
-And now, this year, there's a new paper from Apple. [_The Illusion of Thinking_, by Shojaee & Mirzadeh et al](https://ml-site.cdn-apple.com/papers/the-illusion-of-thinking.pdf). It's…
+And now, this year, there's a new paper from Apple: [_The Illusion of Thinking_, by Shojaee & Mirzadeh et al](https://ml-site.cdn-apple.com/papers/the-illusion-of-thinking.pdf). It was contested & controversial — and we'll address the critiques later — but I think, combined with the above strange failure-cases for modern LLMs, the overall conclusion still holds, or is at least highly plausible. **It's important not to over-update on one study, but I think this paper is a great illustration of the problem.**
 
-...well, best if I just show you.
-
-Here is the child's puzzle game, [Tower of Hanoi](https://en.wikipedia.org/wiki/Tower_of_Hanoi), so named because a 1800's Frenchman thought they look like Vietnamese pagodas, I guess:[^hanoi-pic-src]
+Anyway, the study. Here is the child's puzzle game, [Tower of Hanoi](https://en.wikipedia.org/wiki/Tower_of_Hanoi), so named because a 1800's Frenchman thought they look like Vietnamese pagodas, I guess:[^hanoi-pic-src]
 
 [^hanoi-pic-src]: [Photo by User:Evanherk](https://en.wikipedia.org/wiki/File:Tower_of_Hanoi.jpeg)
 
@@ -1364,7 +1372,7 @@ So the problem's not the _length_ of the reasoning, it's _how common_ is the rea
 
 Where "probability" ~= "how common is it in the training data".
 
-Mystery (partly) solved: that's why LLMs rock at human conversation, but suck at rule-discovery mini-games. And long tasks are "less probable" than short tasks, because homework problems & textbook examples are almost always a page or two, not dozens of pages. (This, I suspect, is why Claude sucked at running a vending machine,[^fail-vending] even though there's lots of writing on how to run a business: when business textbooks give examples, they list a few transactions, not _thousands_.[^synthetic-data])
+Mystery (partly) solved! _That's_ why LLMs rock at human conversation, but suck at rule-discovery mini-games. And long tasks are "less probable" than short tasks, because homework problems & textbook examples are almost always a page or two, not dozens of pages. (This, I suspect, is why Claude sucked at running a vending machine,[^fail-vending] even though there's lots of writing on how to run a business: when business textbooks give examples, they list a few transactions, not _thousands_.[^synthetic-data])
 
 [^synthetic-data]: Maybe this can be solved by writing a _normal_ program, that then writes you "synthetic data" for a business operating successfully over 365 days, that you can fine-tune an LLM on? I dunno, this still feels like the special pleading of "yes I can add 7 digits & bomb at 8, but if you give me more training I can do it!" If you pass 7 but bomb 8, there's something fundamentally wrong that "more scale" don't fix.
 
@@ -1376,15 +1384,32 @@ This also explains why AI's success at _common_ code tasks is exponential, with 
 
 ![Graph from ARC-AGI. Description below](../media/p3/gears/arc-agi.png)
 
-The above graph shows various AIs' performance vs cost on ARC-AGI, a series of games where you have to _discover_ the games' rules. Notice it's the _x-axis_ that's exponential (\\$1, \\$10, \\$100), _not the y-axis, which 'exponential trend' graphs are supposed to be_. So a _straight_ line on this graph means that performance-for-cost is getting exponentially _worse_, not better. And the above chart's "frontier" isn't a straight line, it's bending _downwards_, meaning LLMs' performance-for-cost is _worse_ than exponential. ([beware AI labs disguising their crappy progress with exponential _x_-axes!](https://www.tobyord.com/writing/inference-scaling-and-the-log-x-chart))
+The above graph shows various AIs' performance vs cost on ARC-AGI, a series of games where you have to _discover_ the games' rules. Notice it's the _x-axis_ that's exponential (\\$1, \\$10, \\$100), _not the y-axis, which 'exponential trend' graphs are supposed to be_. So a _straight_ line on this graph means that performance-for-cost is getting exponentially _worse_, not better. And the above chart's "frontier" isn't a straight line, it's bending _downwards_, meaning LLMs' performance-for-cost is _worse_ than exponential. ([beware AI labs disguising their crappy progress with exponential _x_-axes!](https://www.tobyord.com/writing/inference-scaling-and-the-log-x-chart)) Even Rich Sutton, famous for his "bitter lesson" that you can just add scale to AI and they'll do better, thinks "LLMs are a dead end".[^sutton]
 
-**In sum:**
+(Also, as for why LLMs seem to be hitting the maximum performance at most other benchmarks that's _not_ ARC-AGI? To be honest, the developers may be (unintentionally?) cheating and training their LLMs on the correct answers. It's like a student studying for a test by stealing the answers _and memorizing them_. We know this is happening, because frontier LLMs can produce the "canary strings" that are included with the answers' data, which implies the LLMs training data _included the answers_. At the very least, the companies didn't do data filtering to make sure that benchmarks' answers didn't end up in their giant web-scraped data dumps.[^canary])
 
-Common task → LLMs get exponentially better over time
+[^canary]: In 2020, [niplav](https://www.lesswrong.com/posts/QZM6pErzL7JwE3pkv/shortplav) found that Claude Sonnet 3.5 could reproduce a common benchmark's "canary string". In 2024, [Jozdien](https://www.alignmentforum.org/posts/kSmHMoaLKGcGgyWzs/big-bench-canary-contamination-in-gpt-4) found that GPT-4 (base model) can too. The reason this is bad is because it's trivially easy to filter out all documents with the canary string — just search if it's in a document, then leave out the document if it is. The canary string _itself_ isn't a cheat, but it hints at a high probability that the training data was contaminated with the benchmark's answers, making LLMs' performance on those benchmarks untrustworthy.
 
-Uncommon tasks → <img src="../media/p3/gears/cheems.png" alt="crying meme dog" class="inline-icon">
+[^sutton]: From Sutton's famous [2019 essay The Bitter Lesson](http://www.incompleteideas.net/IncIdeas/BitterLesson.html): “_One thing that should be learned from the bitter lesson is the great power of general purpose methods, of methods that continue to scale with increased computation even as the available computation becomes very great._” But in [a 2025 podcast with Dwarkesh Patel](https://www.youtube.com/watch?v=21EYKqUsPfg), he believes LLMs are "a dead end", because they imitate without building "robust world models".
 
-To be clear, a mere "common task auto-completer" can _still_ have huge impact, for better _and_ worse. In blind tests, AI therapists are preferred over human therapists, by both human clients _and human therapists themselves_.[^win-therapy] AI Therapy could finally make mental healthcare accessible to all, and/or, make humans emotionally dependent on corporate-owned bots. And I expect _my_ two main jobs, "science communicator" and "web developer", to be mostly automated away in the next 5 years. (This is why, in 2026, I want to pivot to becoming a researcher. Because the day _science itself_ is automated… well… either way that shakes out, I won't have to figure out how to pay rent anymore.)
+. . .
+
+Okay, _now_ let's quickly address the two main criticisms of the controversial Apple paper:
+
+1) The LLM's "context window" (its "thinking space") wasn't big enough to generate the full solutions. This _is_ true for the 12+ disk and up, but not for 8-disk. And the River Crossing solutions were _smaller_ than the 5-disk solutions, yet the LLMs failed anyway. So, size of the "thinking space" wasn't the problem.
+2) These LLMs can write _a computer program that solves Hanoi_, then can pass that to a tool that runs code. LLM + program synthesis _is_ a promising solution to "thinking in vibes + gears", and in fact is how the top contenders at ARC-AGI did it. But: this is like someone who can't add with pen & paper, but _can_ pull up a calculator and add two numbers. It shows a lack of deeper understanding. (And in this case, Hanoi is so famous, of _course_ code solutions are in the training data.)
+
+Again, it's important not to over-update on _one_ study — but, I think, _combined_ with the results from all of where LLMs fail at (and are great at), it's strong evidence of this hypothesis:
+
+**Common task** → LLMs get exponentially better over time
+
+**Uncommon task** → <img src="../media/p3/gears/cheems.png" alt="crying meme dog" class="inline-icon">
+
+. . .
+
+To be clear, a mere "common task auto-completer" can _still_ have huge impact, for better _and_ worse. In blind tests, AI therapists are preferred over human therapists, by both human clients _and human therapists themselves_.[^win-therapy] AI Therapy could finally make mental healthcare accessible to all, and/or, make humans emotionally dependent on corporate-owned bots. AIs are already superhuman at political persuasion, for good causes & bad.[^super-persuasion] And I expect _my_ main job, "web developer", to be fully automated away in 5 years by mere "common-task auto-completers". (This is why, in 2026, I want to pivot to becoming a researcher. Because the day _science itself_ is automated… well… either way that shakes out, I won't have to figure out how to pay rent anymore.)
+
+[^super-persuasion]: From [Hackenburg & Margetts 2024](https://www.pnas.org/doi/pdf/10.1073/pnas.2403116121): “Early research suggests that most capable LLMs can directly persuade humans on political issues (5), draft more persuasive public communications than actual government agencies and political communication experts (6, 7), and generate convincing disinformation and fake news (1, 8, 9). Across these domains, humans are no longer able to consistently distinguish human and LLM-generated texts (8, 10).”
 
 . . .
 
@@ -1585,7 +1610,7 @@ One problem with CEV is that "simulate 8+ billion people debating for 100 years"
 [^sim-1000]: [Park et al 2024](https://arxiv.org/pdf/2411.10109): "We [simulate] the attitudes and behaviors of
 1,052 real individuals [...] The [AI clones] replicate participants' responses on the General Social Survey 85% as accurately _as participants replicate their own answers two weeks later_, and perform comparably in predicting personality traits and outcomes in experimental replications." (emphasis added)
 
-However, a more fundamental problem with CEV is this: people will be _horrified_ by a wiser version of themselves. Imagine if we had powerful AI in the year 1800, that implemented CEV, and accurately simulated our moral development up to the year 2025. A relatively wise person in 1800 could have seen that enslaving Black people was wrong. But even the top-5% wisest people back then would have been _horrified_ by the idea of a Black person being President, or marrying a white woman. By symmetry, there's very likely things _now_ that we're irrationally disgusted by, that a much, much wiser version of us would be okay with.
+However, a more fundamental problem with CEV is this: people will be _horrified_ by a wiser version of themselves. Imagine if we had powerful AI in the year 1800, that implemented CEV, and accurately simulated our moral development up to the year 2025. A relatively wise person in 1800 could have seen that enslaving Black people was wrong. But even the top-5% wisest people back then would have been _horrified_ by the idea of a Black person being President, or marrying a white woman. By symmetry, there's very likely things _now_ that we're irrationally disgusted by, that a much wiser version of us would be okay with.
 
 But if a powerful AGI just plopped down and said, _"Hey here's a horrifying thing I'm going to do, the much wiser version of you would agree to this"_, there's no way to tell in advance if it's true, or something went horribly wrong.
 
@@ -1601,7 +1626,7 @@ _"Because humans suck at doing that. See: all of History."_ Okay, fair enough. B
 
 Sounds nice in theory. Does it work in practice? **So far: yes!** [Taiwan, directly inspired by Coherent Blended Volition](https://blog.pol.is/uber-responds-to-vtaiwans-coherent-blended-volition-3e9b75102b9b), used digital tools to collect & blend the perspectives of citizens & industry, to _create actual policy_. (The specific issue was Uber entering Taiwan.) Inspired by the success of Taiwan's digital tools, Twitter (now 𝕏) used [a similar algorithm to design Birdwatch (now Community Notes)](https://blog.ncase.me/signal-boost-autumn-2025/#bridging), which as far as I can tell, is still the _only_ fact-checking service to be rated net-helpful _across the U.S. political spectrum._ No easy feat, in these polarized times!
 
-This way, instead of asking a powerful AI to simulate us getting wiser, AI _actually helps us_ get wiser. This way, we'll be able to accept wiser ideas & actions, even if they would have disgusted the less wise, more irrational previous versions of us.
+This way, instead of asking a powerful AI to simulate us getting wiser, AI can help us _actually get wiser_. (by being a Socratic questioner, discussion facilitator, fact-checker, etc.) This way, we'll be able to accept wiser ideas & actions, even if the previous less-wise versions of us would've rejected them.
 
 We make our tools better, so our tools help _us_ be better, repeat. We'll grow _alongside_ the AIs.
 
@@ -1700,14 +1725,14 @@ a set of six forecasting questions and had the option to consult their assigned 
 **2\) Use sticks & carrots to stay above the "safe" line.**
 
 * <b><u>Responsible Scaling Policy</u></b>.[^anthropic-RSP] A problem: we can't even accurately predict the risks of advanced AI until we get closer to it. So, instead of having a policy for across all possible future AIs, we take an _iterative_ approach (like with Scalable Oversight). For example: "We commit to not even _start_ training an AI of Level N, until we have safeguards and evaluations _up to Level N+1_."
-    * A similar idea was proposed in the [Guaranteed Safe AI](https://arxiv.org/pdf/2405.06624) paper
+    * A similar idea was proposed in the [Guaranteed Safe AI](https://arxiv.org/pdf/2405.06624) paper.
 * <u>Differential Technology Development (DTD)</u>[^dtd] AI, by default, is **"dual-use"**: could be used for great good or great harm. _Differential_ development, then, is about investing in research & tech that **1) advances "Alignment" more than "Capabilities", and 2) maximizes the usefulness of AI while minimizing its risks.** For example:
     * Tech to fight catastrophic risk: AI & non-AI tools that *boost* our cybersecurity, biosecurity, and mental security.
     * AI Safety research. Yes this suggestion is kinda back-scratchy, but I still endorse it.
     * [Data filtering](https://arxiv.org/pdf/2402.00530) and [Machine Unlearning](https://www.ieee-security.org/TC/SP2015/papers-archived/6949a463.pdf), so that LLMs contain helpful knowledge, but not detailed knowledge of how to make bombs or superviruses.
+    * At least commit to NOT building horrible stuff like fully-autonomous killer drones.[^slaughterbots]
     * AI that *enhances* humans, not *replaces* humans. (See below: "Alternatives to AGI" and "Cyborgism"!)
-    * Combine this idea with _decentralized & democratic tech_, to prevent AI and/or AI Governance from becoming a tools for tyrants. See: [d/acc](https://vitalik.eth.limo/general/2023/11/27/techno_optimism.html), [Plurality](https://vitalik.eth.limo/general/2024/08/21/plurality.html), [6pack.care](https://6pack.care/). (Also explained more below)
-* <u>At least commit to NOT building horrible stuff like fully-autonomous killer drones.</u>[^slaughterbots]
+    * Combine this idea with _decentralized & democratic tech_, to prevent AI and/or AI Governance from becoming a tools for tyrants. See: [d/acc](https://vitalik.eth.limo/general/2023/11/27/techno_optimism.html), [Plurality](https://vitalik.eth.limo/general/2024/08/21/plurality.html), [6pack.care](https://6pack.care/). (explained more in the below infographic ⤵)
 
 [^slaughterbots]: From Stuart Russell, the co-author of the most-popular textbook in AI: [Banning Lethal Autonomous Weapons: An Education](https://people.eecs.berkeley.edu/~russell/papers/issues22-laws.pdf)
 
@@ -1761,7 +1786,7 @@ But in the past, hasn't automation always been good on average, creating more jo
 
 1. Well, re: "average", the average person has one testicle. Point is: **"average" ignores the _variance_.** If the bottom 99% of people lose \\$10,000, so that the top 1% gain \\$1,000,000, that's a win "on average". I exaggerate, but [since Covid, we may already be in a K-shaped economy](https://www.marketplace.org/story/2025/11/11/kshaped-economy-mirrored-by-covids-uneven-recovery): one line goes up for the rich, one line goes down for the rest of us. (And even if you're a utilitarian who only cares about total utility, remember utility is logarithmic to wealth. So if Alice gains \\$10,000 & Bob loses \\$10,000, Alice gains _less_ utility than Bob loses: total wealth is constant, but total _utility_ drops. You wouldn't be _neutral_ about a coin flip where you gain/lose \\$10,000, would you?)
 2. **Yes, automation _does_ create jobs at first, but at advanced levels, starts taking them away.** A good example is automatic telling machines (ATMs) at banks: at first, their introduction actually correlated with an _increase_ in human tellers being hired, because while each branch needed fewer human tellers, ATMs made it cheaper to open many _more_ branches, so that total humans hired actually increased. In the short run. Now, with online banking, and with the market for bank branches already saturated, human tellers hired is dropping again. ([see this article](https://80000hours.org/agi/guide/skills-ai-makes-valuable/#1-why-automation-often-doesnt-decrease-wages))
-3. **This time really is different.** In the past, automation "only" took out one small sector at a time (textile workers, horse drivers, elevator operators, etc). But _this_ time, with deep learning, AIs can automate a huge percentage of the human economy in one go: self-driving cars vs truckers & taxicabs, LLMs vs programmers & writers, diffusion models vs artists. (And if you're in an AI-safe job, like plumber? Good for you! But your wages will drop from _everyone else_ scrambling to re-train to AI-safe jobs, like plumber.)
+3. **This time really is different.** In the past, automation "only" took out one small sector at a time (textile workers, horse drivers, elevator operators, etc). But _this_ time, with deep learning, AIs can automate a huge percentage of the human economy in one go: a) self-driving cars vs truckers & taxicabs, b) LLMs vs programmers, lawyers & writers, c) speech-to-text-and-back vs call centers, secretaries, & audiobooks/podcasters, d) image and video models vs artists and creatives, e) so on and so on. And if you're in an AI-safe job, like plumber? Good for you! But your wages will drop from _everyone else_ scrambling to re-train to AI-safe jobs, like plumber.
 
 (It's hard to tell how badly AI is affecting the job market _right now_. The hiring rates for artists, writers, and even newly-graduated programmers — once thought of a golden ticket to a 6-figure salary! — has been dropping since generative AI came out in late 2022. But that _also_ coincides with a post-Covid recession, so it's hard to tell how much of the unemployment is due to AI specifically, vs the sucky economy in general.)
 
@@ -1771,7 +1796,7 @@ A popular proposal is a **Universal Basic Income (UBI)**, funded by taxing AI. A
 
 A lot of skepticism about UBI comes from it promoted by tech CEOs [like Sam Altman](https://moores.samaltman.com/), who are, uh, ["not completely candid"](https://garymarcus.substack.com/p/sam-altmans-pants-are-totally-on). That said, just because someone's promoting an idea cynically to quell dissent, doesn't mean it's _not_ a good idea. Tech CEOs could be lying about promising UBI, because UBI _would_ be great. [To quote GLaDOS](https://p1.portal2sounds.com/57): "Killing you, and giving you good advice, aren't mutually exclusive."
 
-Another common critique of UBI is that people don't just need money, they need _meaning_, and people get meaning from their jobs. (["Love and Work"](https://figuringoutfulfillment.wordpress.com/2012/01/23/lieben-und-arbeiten/), Freud supposedly said.) Now: writing as someone who finds meaning in her job: _f\@\#k off_. I keep hearing the "work is good coz it gives meaning" line from think tanks & pundits & the Credentialed Class, and, yeah, easy for _you_ to say, you have a _nice_ job. _I_ have a nice job. We're not working the night shift at 7/11, or slowly getting lung cancer from the industrial fumes. _But, oh, if we're all living off UBI, how will we get meaning if we can't sell our labour on a market?_ Oh I dunno, how about spending life with family? friends? lovers? while getting your sense of mastery & challenge from sports, art, math, play? And if you love your job making art or writing essays, you know you can just _keep doing that_ even with UBI, right?
+Another common critique of UBI is that people don't just need money, they need _meaning_, and people get meaning from their jobs. (["Love and Work"](https://figuringoutfulfillment.wordpress.com/2012/01/23/lieben-und-arbeiten/), Freud supposedly said.) Now: writing as someone who finds meaning in her job: _f\@\#k off_. I keep hearing the "work is good coz it gives meaning" line from think tanks & pundits & the Credentialed Class, and, yeah, easy for _you_ to say, you have a _nice_ job. _I_ have a nice job. We're not working the graveyard shift at 7/11, or slowly getting lung cancer from the industrial fumes. _But, oh, if we're all living off UBI, how will we get meaning if we can't sell our labour on a market?_ Oh I dunno, how about spending life with family? friends? lovers? while getting your sense of mastery & challenge from sports, art, math, play? And if you love your job making art or writing essays, you know you can just _keep doing that_ even with UBI, right?
 
 Sorry I'm pissy about this, I just do not respect Status Quo Stockholm Syndrome.
 
@@ -1815,7 +1840,7 @@ This can also be paired with incentivizing & investing in **upskilling & retrain
 
 We're not even scratching the surface of economic policy proposals re: advanced AI. For a good overview, [check out this review of options on Anthropic's blog.](https://www.anthropic.com/research/economic-policy-responses)
 
-My personal opinion, as of Dec 2025, open to change: for policy, I'd recommend a combined UBI + EITC, funded by the productivity gains from AI, given as a dividend mostly towards high-automation-risk workers like: a) truckers, taxicab drivers (self-driving cars), b) call center services (speech & language AIs), c) retail (digital kiosks, which aren't even "AI"). And at the risk of being extremely self-serving, sure: digital arts, programming, and white-collar work are all also at high automation risk.
+My personal opinion, as of Dec 2025, open to change: for policy, I'd recommend a combined UBI + EITC + educational vouchers for reskilling. It'd be funded by taxing the productivity gains from AI, and given mostly towards high-automation-risk workers like: a) truckers, taxicab drivers (self-driving cars), b) call center services (speech & language AIs), c) retail (digital kiosks, which aren't even "AI"). And at the risk of being extremely self-serving, sure: digital arts, programming, and white-collar work are all also at high automation risk.
 
 As for what you can do _personally_, well, you might want to read/listen to **[How not to lose your job to AI](https://80000hours.org/agi/guide/skills-ai-makes-valuable/).**
 
